<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"

        app:popupTheme="@style/AppTheme.PopupOverlay" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_summary"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="5dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BtnBack"
        android:text="@string/back_to_start"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <ScrollView

        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:scrollbarStyle="insideOverlay"
        android:fillViewport="true"
        android:id="@+id/scrollView"
        >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >


        <com.example.finalproject.GraphView
            android:id="@+id/histogram_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:layout_alignTop="@+id/textViewAvgBtnDistance"
            android:layout_marginTop="100dp"

            android:background="@android:color/transparent"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/histogram_view"
            android:layout_marginBottom="-30dp"
            android:text="@string/x_acceleration"
            android:textColor="#1226E2"
            android:id="@+id/XAcceleration"
            android:layout_alignParentLeft="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/XAcceleration"
            android:layout_marginBottom="-20dp"
            android:text="@string/y_acceleration"
            android:id="@+id/YAccelleration"
            android:textColor="#FC0808"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />


        <TextView
            android:id="@+id/zAcceleration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/YAccelleration"
            android:layout_marginBottom="-20dp"
            android:text="@string/z_acceleration"
            android:layout_alignParentStart="true"
            android:textColor="#2FFF06"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/zAcceleration"
            android:layout_marginBottom="-30dp"
            android:text=""
            android:id="@+id/textViewXMean"
            />

        <TextView
            android:id="@+id/textViewYMean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewXMean"
            android:layout_marginBottom="-30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewYMean"
            android:layout_marginBottom="-30dp"
            android:id="@+id/textViewZMean"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewZMean"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="-30dp"
            android:id="@+id/AvgBtnTIme"
            android:text="@string/averagetime_between_1st_and_2nd_button_hit_ms"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/AvgBtnTIme"
            android:layout_marginBottom="-30dp"
            android:id="@+id/textViewAvgTime2Btn"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-30dp"
            android:layout_alignParentStart="true"
            android:maxWidth="200dp"
            android:text="@string/time_needed_for_activity_veritaps_sec"
            android:id="@+id/textViewActivityTime"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:maxWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-80dp"
            android:layout_alignBottom="@+id/textViewActivityTime"
            android:text="@string/time_needed_for_activity_evehicle_sec"
            android:id="@+id/textViewActivityTimeVehicle"

           />

        <TextView
            android:id="@+id/textViewAvgBtnDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewActivityTimeVehicle"
            android:layout_marginBottom="-80dp"
            android:text="@string/averagetouchdistance_to_button_per_touch_in_range_of_200_units"

            />
    </RelativeLayout>
    </ScrollView>



</RelativeLayout>